--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 
 	<groupId>com.aoindustries</groupId>
 	<artifactId>ao-web-page-servlet</artifactId>
-	<version>1.1</version>
+	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>AO Web Page Servlet</name>
@@ -53,7 +53,7 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 		<connection>scm:git:git://github.com/aoindustries/ao-web-page-servlet.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/ao-web-page-servlet.git</developerConnection>
 		<url>http://github.com/aoindustries/ao-web-page-servlet</url>
-		<tag>ao-web-page-servlet-1.1</tag>
+		<tag>HEAD</tag>
 	</scm>
 
 	<repositories>
