--- a/pom.xml
+++ b/pom.xml
@@ -1,36 +1,36 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
-ao-web-page-servlet - Java API for modeling web page content and relationships in a Servlet environment.
+semanticcms-core-servlet - Java API for modeling web page content and relationships in a Servlet environment.
 Copyright (C) 2016  AO Industries, Inc.
     support@aoindustries.com
     7262 Bull Pen Cir
     Mobile, AL 36695
 
-This file is part of ao-web-page-servlet.
+This file is part of semanticcms-core-servlet.
 
-ao-web-page-servlet is free software: you can redistribute it and/or modify
+semanticcms-core-servlet is free software: you can redistribute it and/or modify
 it under the terms of the GNU Lesser General Public License as published by
 the Free Software Foundation, either version 3 of the License, or
 (at your option) any later version.
 
-ao-web-page-servlet is distributed in the hope that it will be useful,
+semanticcms-core-servlet is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU Lesser General Public License for more details.
 
 You should have received a copy of the GNU Lesser General Public License
-along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
+along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses />.
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.aoindustries</groupId>
-	<artifactId>ao-web-page-servlet</artifactId>
+	<groupId>com.semanticcms</groupId>
+	<artifactId>semanticcms-core-servlet</artifactId>
 	<version>1.2-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>AO Web Page Servlet</name>
-	<url>https://www.aoindustries.com/docs/ao-web-page-servlet/</url>
+	<name>SemanticCMS Core Servlet</name>
+	<url>https://semanticcms.com/docs/semanticcms-core-servlet/</url>
 	<description>Java API for modeling web page content and relationships in a Servlet environment.</description>
 
 	<licenses>
@@ -50,9 +50,9 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 	</developers>
 
 	<scm>
-		<connection>scm:git:git://github.com/aoindustries/ao-web-page-servlet.git</connection>
-		<developerConnection>scm:git:git@github.com:aoindustries/ao-web-page-servlet.git</developerConnection>
-		<url>http://github.com/aoindustries/ao-web-page-servlet</url>
+		<connection>scm:git:git://github.com/aoindustries/semanticcms-core-servlet.git</connection>
+		<developerConnection>scm:git:git@github.com:aoindustries/semanticcms-core-servlet.git</developerConnection>
+		<url>http://github.com/aoindustries/semanticcms-core-servlet</url>
 		<tag>HEAD</tag>
 	</scm>
 
@@ -222,13 +222,13 @@ along with ao-web-page-servlet.  If not, see <http://www.gnu.org/licenses />.
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
-			<artifactId>ao-web-page</artifactId>
-			<version>1.1</version>
-		</dependency>
-		<dependency>
-			<groupId>com.aoindustries</groupId>
 			<artifactId>aocode-public</artifactId>
 			<version>1.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-model</artifactId>
+			<version>1.2</version>
 		</dependency>
 	</dependencies>
 </project>
