--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-model</artifactId>
-			<version>1.5</version>
+			<version>1.6-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
