--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 	<parent>
 		<groupId>com.semanticcms</groupId>
 		<artifactId>semanticcms-core</artifactId>
-		<version>1.3</version>
+		<version>1.4-SNAPSHOT</version>
 	</parent>
 
 	<groupId>com.semanticcms</groupId>
@@ -36,7 +36,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 	<packaging>jar</packaging>
 
 	<name>SemanticCMS Core Servlet</name>
-	<url>https://semanticcms.com/docs/semanticcms-core-servlet/</url>
+	<url>https://semanticcms.com/core/servlet/</url>
 	<description>Java API for modeling web page content and relationships in a Servlet environment.</description>
 
 	<scm>
@@ -87,7 +87,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-model</artifactId>
-			<version>1.6</version>
+			<version>1.7-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
