--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 							<configuration>
 								<links>
 									<link>http://docs.oracle.com/javaee/6/api/</link>
+									<link>https://www.aoindustries.com/docs/ao-concurrent/</link>
 									<link>https://www.aoindustries.com/docs/ao-encoding/</link>
 									<link>https://www.aoindustries.com/docs/ao-io-buffer/</link>
 									<link>https://www.aoindustries.com/docs/ao-servlet-filter/</link>
