--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 							<configuration>
 								<links>
 									<link>https://docs.oracle.com/javaee/6/api/</link>
+									<link>http://www.joda.org/joda-time/apidocs/</link>
 									<link>https://www.aoindustries.com/ao-concurrent/apidocs/</link>
 									<link>https://www.aoindustries.com/ao-encoding/apidocs/</link>
 									<link>https://www.aoindustries.com/ao-io-buffer/apidocs/</link>
@@ -99,6 +100,11 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 			<artifactId>javax.servlet.jsp-api</artifactId>
 			<version>2.2.1</version>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>joda-time</groupId>
+			<artifactId>joda-time</artifactId>
+			<version>2.9.4</version>
 		</dependency>
 		<dependency>
 			<groupId>com.aoindustries</groupId>
