--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-core-servlet</artifactId>
-	<version>1.9.1-SNAPSHOT</version>
+	<version>1.10.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -78,6 +78,34 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 						</plugin>
 					</plugins>
 				</pluginManagement>
+				<plugins>
+					<!-- Add XML Schema resources -->
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-resources-plugin</artifactId>
+						<executions>
+							<execution>
+								<id>book-xml-schemas</id>
+								<phase>process-resources</phase>
+								<goals>
+									<goal>copy-resources</goal>
+								</goals>
+								<configuration>
+									<resources>
+										<resource>
+											<directory>src/main/resources/com/semanticcms/core/servlet</directory>
+											<includes>
+												<include>books-1.0.xsd</include>
+											</includes>
+										</resource>
+									</resources>
+									<!-- Put into META-INF/resources to be accessible as website content when jar included in WEB-INF/lib -->
+									<outputDirectory>${project.build.directory}/book/META-INF/resources${bookPath}</outputDirectory>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+				</plugins>
 			</build>
 		</profile>
 	</profiles>
