--- a/pom.xml
+++ b/pom.xml
@@ -66,12 +66,12 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 								<links>
 									<link>https://docs.oracle.com/javaee/6/api/</link>
 									<link>http://www.joda.org/joda-time/apidocs/</link>
-									<link>https://www.aoindustries.com/ao-concurrent/apidocs/</link>
-									<link>https://www.aoindustries.com/ao-encoding/apidocs/</link>
-									<link>https://www.aoindustries.com/ao-io-buffer/apidocs/</link>
-									<link>https://www.aoindustries.com/ao-servlet-filter/apidocs/</link>
-									<link>https://www.aoindustries.com/ao-taglib/apidocs/</link>
-									<link>https://www.aoindustries.com/aocode-public/apidocs/</link>
+									<link>https://aoindustries.com/ao-concurrent/apidocs/</link>
+									<link>https://aoindustries.com/ao-encoding/apidocs/</link>
+									<link>https://aoindustries.com/ao-io-buffer/apidocs/</link>
+									<link>https://aoindustries.com/ao-servlet-filter/apidocs/</link>
+									<link>https://aoindustries.com/ao-taglib/apidocs/</link>
+									<link>https://aoindustries.com/aocode-public/apidocs/</link>
 									<link>https://semanticcms.com/core/model/apidocs/</link>
 								</links>
 							</configuration>
