--- a/book/pom.xml
+++ b/book/pom.xml
@@ -33,7 +33,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-core-servlet-book</artifactId>
-	<version>1.11.0-SNAPSHOT</version>
+	<version>1.11.0</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -62,7 +62,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<connection>scm:git:git://github.com/aoindustries/${documented.artifactId}.git</connection>
 		<developerConnection>scm:git:git@github.com:aoindustries/${documented.artifactId}.git</developerConnection>
 		<url>${documented.scm.url}</url>
-		<tag>HEAD</tag>
+		<tag>semanticcms-core-servlet-book-1.11.0</tag>
 	</scm>
 
 	<build>
