--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 							<artifactId>maven-javadoc-plugin</artifactId>
 							<configuration>
 								<links>
+									<link>${javac.link.javaApi}</link>
 									<link>${javac.link.javaeeApi.6}</link>
 									<link>http://www.joda.org/joda-time/apidocs/</link>
 									<link>https://aoindustries.com/ao-concurrent/apidocs/</link>
