--- a/book/pom.xml
+++ b/book/pom.xml
@@ -27,13 +27,13 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 	<parent>
 		<groupId>com.semanticcms</groupId>
 		<artifactId>semanticcms-parent</artifactId>
-		<version>1.0.2-SNAPSHOT</version>
+		<version>2.0.0-SNAPSHOT</version>
 		<relativePath>../../../parent/pom.xml</relativePath>
 	</parent>
 
 	<groupId>com.semanticcms</groupId>
 	<artifactId>semanticcms-core-servlet-book</artifactId>
-	<version>1.12.0-SNAPSHOT</version>
+	<version>2.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -73,7 +73,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>unpack-books-1.0.xsd</id>
+						<id>unpack-books.xsd</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>unpack</goal>
@@ -83,9 +83,12 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 								<artifactItem>
 									<groupId>com.semanticcms</groupId>
 									<artifactId>semanticcms-core-servlet</artifactId>
-									<version>1.12.0-SNAPSHOT</version>
+									<version>2.0.0-SNAPSHOT</version>
 									<type>jar</type>
-									<includes>com/semanticcms/core/servlet/books-1.0.xsd</includes>
+									<includes>
+										com/semanticcms/core/servlet/books-1.0.xsd,
+										com/semanticcms/core/servlet/books-2.0.xsd
+									</includes>
 								</artifactItem>
 							</artifactItems>
 						</configuration>
@@ -97,7 +100,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<artifactId>maven-resources-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>copy-books-1.0.xsd</id>
+						<id>copy-books.xsd</id>
 						<phase>prepare-package</phase>
 						<goals>
 							<goal>copy-resources</goal>
@@ -108,6 +111,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 									<directory>${project.build.directory}/dependency/com/semanticcms/core/servlet</directory>
 									<includes>
 										<include>books-1.0.xsd</include>
+										<include>books-2.0.xsd</include>
 									</includes>
 								</resource>
 							</resources>
@@ -176,7 +180,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-taglib</artifactId>
-			<version>1.9.1-SNAPSHOT</version>
+			<version>2.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
@@ -187,7 +191,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		<dependency>
 			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-servlet</artifactId>
-			<version>1.12.0-SNAPSHOT</version>
+			<version>2.0.0-SNAPSHOT</version>
 			<type>pom</type>
 			<scope>provided</scope>
 			<optional>true</optional>
