--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,9 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 									<link>https://aoindustries.com/ao-tempfiles-servlet/apidocs/</link>
 									<link>https://aoindustries.com/aocode-public/apidocs/</link>
 									<link>https://semanticcms.com/core/model/apidocs/</link>
-									<link>https://semanticcms.com/core/repository/apidocs/</link>
+									<link>https://semanticcms.com/core/pages/apidocs/</link>
+									<link>https://semanticcms.com/core/pages/servlet/apidocs/</link>
+									<link>https://semanticcms.com/pages/missing/apidocs/</link>
 								</links>
 							</configuration>
 						</plugin>
@@ -166,8 +168,20 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
-			<artifactId>semanticcms-core-repository</artifactId>
+			<artifactId>semanticcms-core-pages</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-pages-servlet</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-pages-missing</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<optional>true</optional>
 		</dependency>
 	</dependencies>
 </project>
