--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,14 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 									<link>https://aoindustries.com/aocode-public/apidocs/</link>
 									<link>https://semanticcms.com/core/model/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/apidocs/</link>
+									<link>https://semanticcms.com/core/pages/jsp/apidocs/</link>
+									<link>https://semanticcms.com/core/pages/jspx/apidocs/</link>
 									<link>https://semanticcms.com/core/pages/servlet/apidocs/</link>
-									<link>https://semanticcms.com/pages/missing/apidocs/</link>
+									<link>https://semanticcms.com/core/pages/union/apidocs/</link>
+									<link>https://semanticcms.com/core/resources/apidocs/</link>
+									<link>https://semanticcms.com/core/resources/servlet/apidocs/</link>
+									<link>https://semanticcms.com/resources/filesystem/apidocs/</link>
+									<link>https://semanticcms.com/resources/union/apidocs/</link>
 								</links>
 							</configuration>
 						</plugin>
@@ -173,13 +179,48 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-pages-jsp</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-pages-jspx</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
 			<artifactId>semanticcms-core-pages-servlet</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.semanticcms</groupId>
-			<artifactId>semanticcms-pages-missing</artifactId>
+			<artifactId>semanticcms-core-pages-union</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-resources</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-core-resources-servlet</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-resources-filesystem</artifactId>
+			<version>2.0.0-SNAPSHOT</version>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.semanticcms</groupId>
+			<artifactId>semanticcms-resources-union</artifactId>
 			<version>2.0.0-SNAPSHOT</version>
 			<optional>true</optional>
 		</dependency>
