Resolved offlineLink lifecycle issues through the use of maven-remote-resources-plugin

--- a/book/pom.xml
+++ b/book/pom.xml
@@ -66,11 +66,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<groupId>org.apache.maven.plugins</groupId><artifactId>maven-dependency-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>unpack-books-1.0.xsd</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>unpack</goal>
-						</goals>
+						<id>unpack-books-1.0.xsd</id><phase>prepare-package</phase><goals><goal>unpack</goal></goals>
 						<configuration>
 							<artifactItems>
 								<artifactItem>
@@ -87,11 +83,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 				<groupId>org.apache.maven.plugins</groupId><artifactId>maven-resources-plugin</artifactId>
 				<executions>
 					<execution>
-						<id>copy-books-1.0.xsd</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
+						<id>copy-books-1.0.xsd</id><phase>prepare-package</phase><goals><goal>copy-resources</goal></goals>
 						<configuration>
 							<resources>
 								<resource>
@@ -107,11 +99,7 @@ along with semanticcms-core-servlet.  If not, see <http://www.gnu.org/licenses /
 					</execution>
 					<!-- Create a second copy in the resource directory used by maven-bundle-plugin -->
 					<execution>
-						<id>copy-books-1.0.xsd-bundle</id>
-						<phase>prepare-package</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
+						<id>copy-books-1.0.xsd-bundle</id><phase>prepare-package</phase><goals><goal>copy-resources</goal></goals>
 						<configuration>
 							<resources>
 								<resource>
