Enabled SpotBugs on all builds using SpotBugs Maven Plugin.

--- a/pom.xml
+++ b/pom.xml
@@ -133,6 +133,13 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
 					</instructions>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>com.github.spotbugs</groupId><artifactId>spotbugs-maven-plugin</artifactId>
+				<configuration>
+					<!-- TODO: Clean-up SpotBugs -->
+					<failOnError>false</failOnError>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
