--- a/book/pom.xml
+++ b/book/pom.xml
@@ -36,15 +36,15 @@ along with semanticcms-core-servlet.  If not, see <https://www.gnu.org/licenses/
     <module.name>com.semanticcms.core.servlet.book</module.name>
     <!-- These values are copied from the project being documented -->
     <documented.artifactId>semanticcms-core-servlet</documented.artifactId>
-    <documented.name>SemanticCMS Core Servlet²</documented.name>
+    <documented.name>SemanticCMS Core Servlet</documented.name>
     <documented.description>Java API for modeling web page content and relationships in a Servlet environment.</documented.description>
 
     <description.html><![CDATA[Documentation for <a target="${javadoc.target}" href="${project.url}">${documented.name}</a> in <a target="${javadoc.target}" href="https://semanticcms.com/">SemanticCMS</a> format.]]></description.html>
   </properties>
 
-  <name>SemanticCMS Core Servlet² Book</name>
+  <name>SemanticCMS Core Servlet Book</name>
   <url>https://semanticcms.com/core/servlet/</url>
-  <description>Documentation for SemanticCMS Core Servlet² in SemanticCMS format.</description>
+  <description>Documentation for SemanticCMS Core Servlet in SemanticCMS format.</description>
   <inceptionYear>2013</inceptionYear>
 
   <licenses>
